--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+    <script src="https://polyfill.io/v3/polyfill.min.js"></script>
+    <script src="https://peterolson.github.io/BigInteger.js/BigInteger.min.js"></script>
     <title>miq</title>
   </head>
   <body>
-    <script type="module" src="/src/main.js"></script>
+    <script defer>
+      if (!window.BigInt) window.BigInt = bigInt;
+    </script>
+    <script type="module" src="/src/main.js" defer></script>
   </body>
 </html>
