--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-		<script src="https://polyfill.io/v3/polyfill.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js"></script>
 		<script src="https://peterolson.github.io/BigInteger.js/BigInteger.min.js"></script>
 		<title>miq</title>
 	</head>
